Fix Bug 1254938 - Google Play button on /firefox/new/ scene 2 has wrong width

--- a/media/css/firefox/new/scene2.less
+++ b/media/css/firefox/new/scene2.less
@@ -43,7 +43,7 @@
         margin: @baseLine auto (@baseLine * 2);
         padding: 0;
         list-style: none;
-        width: 361px;
+        width: 384px;
         .clearfix();
     }
 
@@ -51,16 +51,8 @@
         display: inline;
         float: left;
         margin: 0 @baseLine;
+        width: 152px;
         height: 45px;
-
-        // ie8 seems to need widths set to display properly
-        &.android {
-            width: 129px;
-        }
-
-        &.ios {
-            width: 152px;
-        }
     }
 
     a {
